--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <html>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css" rel="stylesheet" />
-  <script src="script.js"></script>
+  <head> <script src="script.js"></script> </head>
 <body class="bg-black">
 <header class="text-white sticky pl-10 pt-5 pb-7 z-10 select-none"><ol class="flex flex-row items-center space-x-4 inline-block"><li><a href="index.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">HOME</a></li><li><a href="blog.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-100 w-32">PHOTO BLOG</a></li> <!--<li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">ABOUT</a></li><!--><li><a href="projects.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PROJECTS</a></li>
   <li> <div id="timer" class="text-white absolute inset-y-5 right-10">updated may 9</div></li>
