--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <li> <div id="timer" class="text-white absolute inset-y-5 right-10">updated may 9</div></li>
   </ol> 
 </header>
-<div class="grid grid-cols-2">
+<div class="grid grid-cols-2 grid-rows-2">
 <div class="col-start-1 col-end-1 text-white ml-10 text-lg sm:text-xl mt-12 mr-4 col-normal sm:col-span-14 md:col-span-9">Hey I'm Dev and I like to build algorithm and AR/CV related projects.<br><br>Check out some of my <a class="underline" href="#">projects</a> or look at something on my <a class="underline" href="#">photo blog</a>.</div>
   <img class="col-start-2 col-end-2 pl-20 rounded-lg" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F4d%2Fa1%2F2d%2F4da12d837e84e732a7503c179792f0c0.png&f=1&nofb=1"> </img>
   </div>
