--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <img class="col-start-2 col-end-2 pl-20 rounded-lg" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F4d%2Fa1%2F2d%2F4da12d837e84e732a7503c179792f0c0.png&f=1&nofb=1"> </img>
   </div>
   
-  <div id="date" class="pt-40 text-white mb-10 absolute y-5 right-10">updated may 9</div>
-   <div id="" class="pt-40 text-white mb-10 pl-10 absolute y-5">last updated may 9</div>
+  <div id="date" class="pt-40 text-white mb-10 absolute y-5 right-10">date</div>
+   <div id="lastupdated" class="pt-40 text-white mb-10 pl-10 absolute y-5">last updated may 9</div>
 </body>
 </html>
