--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!--<li><a href="blog.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PHOTO BLOG</a></li><!-->
   <!--<li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">ABOUT</a></li><!-->
   <li><a href="projects.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PROJECTS</a></li>
-  <li> <div id="timer" class="text-white absolute inset-y-5 right-10">updated may 9</div></li>
+  <li> <div id="timer" class="text-white absolute inset-y-5 right-10">time</div></li>
   </ol> 
 </header>
 <div class="grid grid-cols-2 grid-rows-2">
