--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css" rel="stylesheet" />
   <head> <script src="script.js"></script> </head>
 <header class="text-white sticky pl-10 pt-5 pb-7 z-10 select-none"><ol class="flex flex-row items-center space-x-4 inline-block"><li><a href="index.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">HOME</a></li> <!--<li><a href="blog.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PHOTO BLOG</a></li><!--<li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">ABOUT</a></li><!--><li><a href="projects.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-100 w-32">PROJECTS</a></li>
-  <li> <div id="timer" class="text-white absolute inset-y-5 right-10">updated may 9</div></li>
+  <li> <div id="timer" class="text-white absolute inset-y-5 right-10">time</div></li>
   </ol> 
 </header>
 
@@ -75,8 +75,7 @@
                                         <path d="M5 12h14"></path>
                                         <path d="M12 5l7 7-7 7"></path>
                                     </svg>
-                                </a>
-                               
+                                </a>       
                             </div>
                         </div>
                     </div>
@@ -85,7 +84,7 @@
         </div>
     </section>
   <!----->
-  <div id="date" class="pt-64 text-white mb-10 absolute y-5 right-10">updated may 9</div>
+  <div id="date" class="pt-64 text-white mb-10 absolute y-5 right-10">date</div>
    <div id="" class="pt-64 text-white mb-10 pl-10 absolute y-5">last updated may 9</div>
 </body>
 </html>
