--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
   
   <!----->
 
-    <section class="md:h-full flex items-center text-gray-600">
+    <section class="flex items-center text-gray-600">
         <div class="container px-5 py-2 mx-auto">
             <div class="text-center mb-12">
                
