--- a/index.html
+++ b/index.html
@@ -18,4 +18,8 @@
   <div id="date" class="pt-40 text-white mb-10 absolute y-5 right-10">date</div>
    <div id="lastupdated" class="pt-40 text-white mb-10 pl-10 absolute y-5">last updated may 9</div>
 </body>
+<script>
+var d = new Date();
+document.getElementById("date").innerHTML = d.getFullYear();
+</script>
 </html>
