--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="p-4 sm:w-1/2 lg:w-1/3">
                     <div class="bg-white h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-                        <img class="lg:h-72 md:h-48 self-center ml-28"
+                        <img class="mx-auto lg:h-72 md:h-48"
                src="https://camo.githubusercontent.com/802807e5ce5f531cbcdb6216b4633d7d27ce7e60399926d3a089a459b01428cd/68747470733a2f2f6d65646961332e67697068792e636f6d2f6d656469612f6a75576968625374397554336c64324954432f67697068792e6769663f7374796c653d63656e7465726d65" alt="pic">
                         <div class="p-6 hover:bg-indigo-500 hover:text-white transition duration-300 ease-in">
                            
