--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <li> <div id="timer" class="text-white absolute inset-y-5 right-10">time</div></li>
   </ol> 
 </header>
-<div class="grid grid-cols-2 grid-rows-2">
+<div class="grid grid-cols-2 grid-rows-1">
 <div class="col-start-1 col-end-1 text-white ml-10 text-lg sm:text-xl mt-12 mr-4 col-normal sm:col-span-14 md:col-span-9">Hey I'm Dev and I like to build algorithm and AR/CV related projects.<br><br>Check out some of my <a class="underline" href="#">projects</a> or look at something on my <a class="underline" href="#">photo blog</a>.</div>
-  <img class="col-start-2 col-end-2 pl-20 rounded-lg" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F4d%2Fa1%2F2d%2F4da12d837e84e732a7503c179792f0c0.png&f=1&nofb=1"> </img>
+  <img class="col-start-2 col-end-2 pl-20 rounded-lg pr-10" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecretcompass.com%2Fwp-content%2Fuploads%2F2018%2F01%2FJungle-Rot.jpg&f=1&nofb=1"> </img>
   </div>
   
   <div id="date" class="pt-40 text-white mb-10 absolute y-5 right-10">date</div>
