--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head> <script src="script.js"></script> </head>
 <body class="bg-black">
 <header class="text-white sticky pl-10 pt-5 pb-7 z-10 select-none"><ol class="flex flex-row items-center space-x-4 inline-block">
-  <li><a href="index.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-100 w-32">HOME</a></li>
+  <li><a href="devsuri.tech" class="whitespace-nowrap focus:outline-none font-semibold opacity-100 w-32">HOME</a></li>
   <!--<li><a href="blog.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PHOTO BLOG</a></li><!-->
   <!--<li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">ABOUT</a></li><!-->
   <li><a href="projects.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PROJECTS</a></li>
