--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
 <html>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css" rel="stylesheet" />
-  <head> <script> 
-    window.onload = displayClock();
-    function displayClock(){
-      var d = new Date();
-      document.getElementById("date").innerHTML = d.getMonth() + "/" d.getDate() + "/" + d.getFullYear();
-      document.getElementById("timer").innerHTML = d.toLocaleTimeString();
-      setTimeout(displayClock, 1000);
-    }
-    </script> </head>
 <body class="bg-black">
 <header class="text-white sticky pl-10 pt-5 pb-7 z-10 select-none"><ol class="flex flex-row items-center space-x-4 inline-block">
   <li><a href="." class="whitespace-nowrap focus:outline-none font-semibold opacity-100 w-32">HOME</a></li>
@@ -25,5 +16,15 @@
   
   <div id="date" class="pt-40 text-white mb-10 absolute y-5 right-10">date</div>
    <div id="lastupdated" class="pt-40 text-white mb-10 pl-10 absolute y-5">last updated may 9</div>
+  
+    <script> 
+    window.onload = displayClock();
+    function displayClock(){
+      var d = new Date();
+      document.getElementById("date").innerHTML = d.getMonth() + "/" d.getDate() + "/" + d.getFullYear();
+      document.getElementById("timer").innerHTML = d.toLocaleTimeString();
+      setTimeout(displayClock, 1000);
+    }
+    </script>
 </body>
 </html>
