--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
       setTimeout(displayClock, 1000);
     }
     </script> </head>
-<header class="text-white sticky pl-10 pt-5 z-10 select-none"><ol class="flex flex-row items-center space-x-4 inline-block"><li><a href="index.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">HOME</a></li> <!--<li><a href="blog.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PHOTO BLOG</a></li><!--<li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">ABOUT</a></li><!--><li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-100 w-32">PROJECTS</a></li>
+<header class="text-white sticky pl-10 pt-5 z-10 select-none"><ol class="flex flex-row items-center space-x-4 inline-block"><li><a href="." class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">HOME</a></li> <!--<li><a href="blog.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PHOTO BLOG</a></li><!--<li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">ABOUT</a></li><!--><li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-100 w-32">PROJECTS</a></li>
   <li> <div id="timer" class="text-white absolute inset-y-5 right-10">time</div></li>
   </ol> 
 </header>
