--- a/projects.html
+++ b/projects.html
@@ -1,15 +1,7 @@
 <html>
 <body class="bg-black">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css" rel="stylesheet" />
-    <head> <script> 
-    window.onload = displayClock();
-    function displayClock(){
-      var d = new Date();
-      document.getElementById("date").innerHTML = d.getMonth() + "/" d.getDate() + "/" + d.getFullYear();
-      document.getElementById("timer").innerHTML = d.toLocaleTimeString();
-      setTimeout(displayClock, 1000);
-    }
-    </script> </head>
+
 <header class="text-white sticky pl-10 pt-5 z-10 select-none"><ol class="flex flex-row items-center space-x-4 inline-block"><li><a href="." class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">HOME</a></li> <!--<li><a href="blog.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PHOTO BLOG</a></li><!--<li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">ABOUT</a></li><!--><li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-100 w-32">PROJECTS</a></li>
   <li> <div id="timer" class="text-white absolute inset-y-5 right-10">time</div></li>
   </ol> 
@@ -91,6 +83,15 @@
             </div>
         </div>
     </section>
+      <script> 
+    window.onload = displayClock();
+    function displayClock(){
+      //var d = new Date();
+      //document.getElementById("date").innerHTML = d.getMonth() + "/" d.getDate() + "/" + d.getFullYear();
+      //document.getElementById("timer").innerHTML = d.toLocaleTimeString();
+      //setTimeout(displayClock, 1000);
+    }
+    </script>
   <!----->
   <!---<div id="date" class="pt-20 text-white mb-10 absolute y-5 right-10">date</div>
   <div id="lastupdated" class="pt-20 text-white mb-10 pl-10 absolute y-5">last updated may 9</div> <!---->
