--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     window.onload = displayClock();
     function displayClock(){
       var d = new Date();
+      console.log(d.getMonth() + "/" d.getDate() + "/" + d.getFullYear());
       document.getElementById("date").innerHTML = d.getMonth() + "/" d.getDate() + "/" + d.getFullYear();
       document.getElementById("timer").innerHTML = d.toLocaleTimeString();
       setTimeout(displayClock, 1000);
