--- a/projects.html
+++ b/projects.html
@@ -83,15 +83,7 @@
             </div>
         </div>
     </section>
-      <script> 
-    window.onload = displayClock();
-    function displayClock(){
-      //var d = new Date();
-      //document.getElementById("date").innerHTML = d.getMonth() + "/" d.getDate() + "/" + d.getFullYear();
-      //document.getElementById("timer").innerHTML = d.toLocaleTimeString();
-      //setTimeout(displayClock, 1000);
-    }
-    </script>
+<script src="script.js"></script>
   <!----->
   <!---<div id="date" class="pt-20 text-white mb-10 absolute y-5 right-10">date</div>
   <div id="lastupdated" class="pt-20 text-white mb-10 pl-10 absolute y-5">last updated may 9</div> <!---->
