--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!--<li><a href="blog.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PHOTO BLOG</a></li><!-->
   <!--<li><a href="#" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">ABOUT</a></li><!-->
   <li><a href="projects.html" class="whitespace-nowrap focus:outline-none font-semibold opacity-60 w-32">PROJECTS</a></li>
-  <li> <div id="timer" class="text-white absolute inset-y-5 right-10">time</div></li>
+  <li> <div id="timer" class="text-white absolute inset-y-5 right-10"></div></li>
   </ol> 
 </header>
 <div class="grid grid-cols-2 grid-rows-1">
@@ -15,7 +15,7 @@
   <img class="col-start-2 col-end-2 pl-20 rounded-lg pr-10" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecretcompass.com%2Fwp-content%2Fuploads%2F2018%2F01%2FJungle-Rot.jpg&f=1&nofb=1"> </img>
   </div>
   
-  <div id="date" class="pt-40 text-white mb-10 absolute y-5 right-10">date</div>
+  <div id="date" class="pt-40 text-white mb-10 absolute y-5 right-10"></div>
    <div id="lastupdated" class="pt-40 text-white mb-10 pl-10 absolute y-5">last updated may 9</div>
 <script src="script.js"></script>
 </body>
