--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <img class="col-start-2 col-end-2 pl-20 rounded-lg pr-10" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecretcompass.com%2Fwp-content%2Fuploads%2F2018%2F01%2FJungle-Rot.jpg&f=1&nofb=1"> </img>
   </div>
   
-  <div id="date" class="pt-40 text-white mb-10 absolute y-5 right-10"></div>
+  <div id="date" class="pt-40 text-white mb-10 absolute y-5 right-10"><script> document.write(new Date().toLocaleDateString()); </script>
+</div>
    <div id="lastupdated" class="pt-40 text-white mb-10 pl-10 absolute y-5">last updated may 9</div>
 <script src="script.js"></script>
 </body>
