--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </ol> 
 </header>
 <div class="grid grid-cols-2 grid-rows-1">
+  <span class="text-base font-serif">Projects Projects projects</span>
 <div class="col-start-1 col-end-1 text-white ml-10 text-lg sm:text-xl mt-12 mr-4 col-normal sm:col-span-14 md:col-span-9">Hi, I'm Dev and I like to build algorithm and AR/CV related projects.<br><br>Check out some of my <a class="underline" href="projects.html">projects</a>
   <!---or look at something on my <a class="underline" href="#">photo blog</a><!--->.</div>
   <img class="col-start-2 col-end-2 pl-20 rounded-lg pr-10" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fsecretcompass.com%2Fwp-content%2Fuploads%2F2018%2F01%2FJungle-Rot.jpg&f=1&nofb=1"> </img>
