--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css" rel="stylesheet" />
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
-</style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap" rel="stylesheet">
+  
 <body class="bg-black">
 <header class="text-white sticky pl-10 pt-5 pb-7 z-10 select-none"><ol class="flex flex-row items-center space-x-4 inline-block">
   <li><a href="." class="whitespace-nowrap focus:outline-none font-semibold opacity-100 w-32">HOME</a></li>
